Bug #43779: Truncate AppGallery item descriptions if necessary

--- a/management/univention-web/css/site/appGallery.styl
+++ b/management/univention-web/css/site/appGallery.styl
@@ -140,8 +140,10 @@
 
 				.appHover
 					width: 100%
-					height: 70px
-					padding: 8px
+					padding: 8px 8px 0
+					// set the height so that it is 4 times the line-height
+					// used for truncation in javascript in case of text overflow
+					height: "calc((1em * %s * 4) + %s)" % (@line-height @padding[0])
 					color: #fff
 					font-size: $font-size-caption
 
